--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -180,7 +180,7 @@ import MenuCardDetailed from "../components/MenuCardDetailed.astro";
         <MenuCardDetailed />
       </div>
     </div>
-    <script>
+    <script is:inline data-astro-rerun>
       function openTab(evt, tabName) {
         var i, tabcontent, tablinks;
         tabcontent = document.getElementsByClassName("tab-content");
