--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -12,8 +12,13 @@ import Chart from "../components/chart/index.astro";
         totalItems="3"
         index="0"
         label="Specials"
-        class="grid h-full grid-cols-2 gap-2 overflow-y-scroll"
+        class="grid h-full grid-cols-3 gap-2 overflow-y-scroll"
       >
+        <MenuCard />
+        <MenuCard />
+        <MenuCard />
+        <MenuCard />
+        <MenuCard />
         <MenuCard />
         <MenuCard />
         <MenuCard />
@@ -23,8 +28,11 @@ import Chart from "../components/chart/index.astro";
         totalItems="3"
         index="1"
         label="Entres"
-        class="grid h-full grid-cols-2 gap-2 overflow-y-scroll"
+        class="grid h-full grid-cols-3 gap-2 overflow-y-scroll"
       >
+        <MenuCard />
+        <MenuCard />
+        <MenuCard />
         <MenuCard />
         <MenuCard />
         <MenuCard />
@@ -34,8 +42,12 @@ import Chart from "../components/chart/index.astro";
         totalItems="3"
         index="2"
         label="Sides"
-        class="grid h-full grid-cols-2 gap-2 overflow-y-scroll"
+        class="grid h-full grid-cols-3 gap-2 overflow-y-scroll"
       >
+        <MenuCard />
+        <MenuCard />
+        <MenuCard />
+        <MenuCard />
         <MenuCard />
         <MenuCard />
         <MenuCard />
