--- a/src/pages/waitlist.astro
+++ b/src/pages/waitlist.astro
@@ -11,21 +11,21 @@ import Default from "../layouts/Default.astro";
     <div class="*:tracking-loose list-none pl-4 *:my-3">
       <li>
         <span
-          class="font-bold inline-block min-w-24 rounded-full bg-slate-800/50 px-2 text-right text-red-400"
+          class="inline-block min-w-24 rounded-md bg-slate-800/50 px-2 text-right font-bold text-red-400"
           >Attention:</span
         >
         This is not for making reservations.
       </li>
       <li>
         <span
-          class="font-bold inline-block min-w-24 rounded-full bg-slate-800/50 px-2 text-right text-yellow-400"
+          class="inline-block min-w-24 rounded-md bg-slate-800/50 px-2 text-right font-bold text-yellow-400"
           >Note:
         </span>
         Please join only when we are full.
       </li>
       <li>
         <span
-          class="font-bold inline-block min-w-24 rounded-full bg-slate-800/50 px-2 text-right text-green-400"
+          class="inline-block min-w-24 rounded-md bg-slate-800/50 px-2 text-right font-bold text-green-400"
           >Procedure:
         </span>
         We'll notify you via text when your table is ready and wait for your complete
