header.astro make navbar float

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,12 +14,13 @@ let links = [
 
 <nav
   id="navbar"
-  class="overlay-accent relative flex items-center justify-between bg-jp-waves p-2"
+  class="overlay-accent fixed left-0 right-0 top-0 z-50 mb-10 flex items-center justify-between bg-jp-waves p-2"
 >
   <a
     href={BASE_URL}
     id="navBrand"
     class="rounded-r-full bg-black/50 p-2 font-extrabold text-primary-300"
+    data-astro-prefetch
   >
     <span class="pr-4 text-lg"> Koushinryou </span>
     <span class="block text-sm text-accent-200">香辛料</span>
