--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -1,171 +1,25 @@
 ---
 import Default from "../layouts/Default.astro";
+import Dropdown from "../components/Dropdown.astro";
 ---
 
 <Default>
   <section>
-    <div class="bg-background-900 py-6 sm:py-8 lg:py-12">
-      <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
-        <!-- FAQ Header -->
-        <div class="mb-10 md:mb-16">
-          <h2
-            class="mb-4 text-center text-2xl font-bold text-white md:mb-6 lg:text-3xl"
-          >
-            Frequently asked questions
-          </h2>
-        </div>
-        <!-- End FAQ Header -->
-        <div class="mx-auto flex max-w-screen-md flex-col border-t">
-          <!-- FAQ Item -->
-          <details class="border-b">
-            <summary
-              class="faq-question flex items-center justify-between bg-background-700 px-4 py-4 text-primary-300"
-            >
-              <span class="font-semibold">How does the product work?</span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M19 9l-7 7-7-7"></path>
-              </svg>
-            </summary>
-            <p class="bg-background-800 p-4 text-white">
-              This is a section of some simple filler text, also known as
-              placeholder text. It shares some characteristics of a real written
-              text but is random or otherwise generated. It may be used to
-              display a sample of fonts or generate text for testing.
-            </p>
-          </details>
-          <!-- End FAQ Item -->
-          <!-- FAQ Item -->
-          <details class="border-b">
-            <summary
-              class="faq-question flex items-center justify-between bg-background-700 px-4 py-4 text-primary-300"
-            >
-              <span class="font-semibold">What are the features?</span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M19 9l-7 7-7-7"></path>
-              </svg>
-            </summary>
-            <p class="bg-background-800 p-4 text-white">
-              This is a section of some simple filler text, also known as
-              placeholder text. It shares some characteristics of a real written
-              text but is random or otherwise generated. It may be used to
-              display a sample of fonts or generate text for testing.
-            </p>
-          </details>
-          <!-- End FAQ Item -->
-          <!-- FAQ Item -->
-          <details class="border-b">
-            <summary
-              class="faq-question flex items-center justify-between bg-background-700 px-4 py-4 text-primary-300"
-            >
-              <span class="font-semibold">What about integrations?</span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M19 9l-7 7-7-7"></path>
-              </svg>
-            </summary>
-            <p class="bg-background-800 p-4 text-white">
-              This is a section of some simple filler text, also known as
-              placeholder text. It shares some characteristics of a real written
-              text but is random or otherwise generated. It may be used to
-              display a sample of fonts or generate text for testing.
-            </p>
-          </details>
-          <!-- End FAQ Item -->
-          <!-- FAQ Item -->
-          <details class="border-b">
-            <summary
-              class="faq-question flex items-center justify-between bg-background-700 px-4 py-4 text-primary-300"
-            >
-              <span class="font-semibold">Is support available?</span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M19 9l-7 7-7-7"></path>
-              </svg>
-            </summary>
-            <p class="bg-background-800 p-4 text-white">
-              This is a section of some simple filler text, also known as
-              placeholder text. It shares some characteristics of a real written
-              text but is random or otherwise generated. It may be used to
-              display a sample of fonts or generate text for testing.
-            </p>
-          </details>
-          <!-- End FAQ Item -->
-        </div>
+    <div class="container mx-auto p-4 transition-all duration-500">
+      <!-- FAQ Header -->
+      <div class="mb-10 md:mb-16">
+        <h2
+          class="mb-4 text-center text-2xl font-bold text-white md:mb-6 lg:text-3xl"
+        >
+          Frequently asked questions
+        </h2>
       </div>
+      <Dropdown title="Do you offer vegan?">
+        No, offering true vegan menu items requires a dedicated line of which we
+        do not have room for.
+      </Dropdown>
+      <Dropdown>hello</Dropdown>
+      <Dropdown>hello</Dropdown>
     </div>
   </section>
-  <style>
-    details {
-      position: relative;
-      overflow: hidden;
-    }
-
-    summary {
-      list-style: none;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      cursor: pointer;
-    }
-
-    details[open] summary svg {
-      transform: rotate(180deg);
-    }
-
-    details summary svg {
-      transition: transform 0.3s ease;
-    }
-
-    details p {
-      max-height: 0;
-      overflow: hidden;
-      opacity: 0;
-      transition:
-        max-height 0.3s ease,
-        opacity 0.3s ease;
-    }
-
-    details[open] p {
-      max-height: 200px; /* Adjust according to the content size */
-      opacity: 1;
-    }
-  </style>
 </Default>
