text adjustment  for component

--- a/src/components/MenuCard.astro
+++ b/src/components/MenuCard.astro
@@ -22,14 +22,14 @@ const {
     loading="eager"
   />
   <div
-    class="absolute right-0 top-0 z-10 flex h-full flex-col content-center bg-gradient-to-l from-black/80 from-50% text-white sm:text-xl"
+    class="absolute right-0 top-0 z-10 flex h-full flex-col content-center bg-gradient-to-l from-black/80 from-50% text-white"
   >
     <div
       class="relative flex items-center justify-center pt-4 outline-4 outline-neutral-500"
     >
     </div>
     <!-- Japanese Text with Manual Line Break -->
-    <p class="upright jp max-w-18 py-8 text-xl text-gray-300">
+    <p class="upright jp w-20 py-4 pr-4 text-gray-300 lg:text-base">
       {itemNameJp}
     </p>
   </div>
