adjust for navbar being sticky

--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -10,7 +10,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
-  <body class="bg-background-900">
+  <body class="bg-background-900 pt-24">
     <Header />
     <div class="min-h-svh">
       <slot />
