--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -103,7 +103,11 @@ import MenuCardDetailed from "../components/MenuCardDetailed.astro";
             id="Appetizers"
             class="tab-content current-tab m-2 max-h-screen overflow-auto"
           >
-            <div class="grid gap-2 sm:grid-cols-1 md:grid-cols-3">
+            <div
+              class="grid gap-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3"
+            >
+              <MenuCard />
+              <MenuCard />
               <MenuCard />
             </div>
           </div>
@@ -111,7 +115,9 @@ import MenuCardDetailed from "../components/MenuCardDetailed.astro";
             id="Entres"
             class="tab-content m-2 hidden max-h-screen overflow-auto"
           >
-            <div class="grid gap-2 sm:grid-cols-1 md:grid-cols-3">
+            <div
+              class="grid gap-2 sm:grid-cols-1 md:grid-cols-2 2xl:grid-cols-2"
+            >
               <MenuCard />
               <MenuCard />
             </div>
@@ -120,7 +126,9 @@ import MenuCardDetailed from "../components/MenuCardDetailed.astro";
             id="WeeklySpecials"
             class="tab-content m-2 hidden max-h-screen overflow-auto"
           >
-            <div class="grid gap-2 sm:grid-cols-1 md:grid-cols-3">
+            <div
+              class="grid gap-2 sm:grid-cols-1 md:grid-cols-2 2xl:grid-cols-2"
+            >
               <MenuCard />
               <MenuCard />
               <MenuCard />
@@ -130,7 +138,9 @@ import MenuCardDetailed from "../components/MenuCardDetailed.astro";
             id="Sides"
             class="tab-content m-2 hidden max-h-screen overflow-auto"
           >
-            <div class="grid gap-2 sm:grid-cols-1 md:grid-cols-3">
+            <div
+              class="grid gap-2 sm:grid-cols-1 md:grid-cols-2 2xl:grid-cols-2"
+            >
               <MenuCard />
               <MenuCard />
               <MenuCard />
@@ -141,7 +151,9 @@ import MenuCardDetailed from "../components/MenuCardDetailed.astro";
             id="Drinks"
             class="tab-content m-2 hidden max-h-screen overflow-auto"
           >
-            <div class="grid gap-2 sm:grid-cols-1 md:grid-cols-3">
+            <div
+              class="grid gap-2 sm:grid-cols-1 md:grid-cols-2 2xl:grid-cols-2"
+            >
               <MenuCard />
               <MenuCard />
               <MenuCard />
@@ -153,7 +165,9 @@ import MenuCardDetailed from "../components/MenuCardDetailed.astro";
             id="Desserts"
             class="tab-content m-2 hidden max-h-screen overflow-auto"
           >
-            <div class="grid gap-2 sm:grid-cols-1 md:grid-cols-3">
+            <div
+              class="grid gap-2 sm:grid-cols-1 md:grid-cols-2 2xl:grid-cols-2"
+            >
               <MenuCard />
               <MenuCard />
               <MenuCard />
