--- a/src/pages/waitlist.astro
+++ b/src/pages/waitlist.astro
@@ -3,6 +3,11 @@ import Default from "../layouts/Default.astro";
 ---
 
 <Default>
+  <link
+    rel="preload"
+    href="https://www.waitlist.me/w/12547731249"
+    as="document"
+  />
   <div
     class="prose-md prose prose-invert relative mx-auto mt-6 max-w-prose rounded bg-accent-800 px-4 py-8 text-white shadow-2xl shadow-accent-950 prose-li:marker:text-white"
   >
@@ -33,21 +38,16 @@ import Default from "../layouts/Default.astro";
         to be seated.
       </li>
     </div>
+    <iframe
+      src="https://www.waitlist.me/w/12547731249"
+      class="h-96 w-full rounded-md"></iframe>
     <div>
-      <div class="text-right">
-        <!-- Button Container -->
-        <button
-          class="duration-[2000ms] animate-pulse rounded bg-accent-600 px-4 py-2 text-lg font-semibold text-white outline-none transition hover:bg-primary-600 focus-visible:ring active:bg-gray-700"
-        >
-          <a href="https://www.waitlist.me/w/12547731249">Join Here</a>
-        </button>
-      </div>
-      <p class="mt-4 pl-4 text-left text-sm italic">
+      <p class="mt-4 pl-4 text-right text-sm italic">
         By clicking
         <span
-          class="inline-block rounded-md bg-accent-600 px-2 py-1 text-sm text-white outline-none ring-gray-300 focus-visible:ring active:bg-gray-700"
+          class="inline-block rounded-md bg-red-600 px-2 py-1 text-sm text-white outline-none ring-gray-300 focus-visible:ring active:bg-gray-700"
         >
-          Join Here
+          +Add a Party
         </span>
         <span class="block"> you agree to what is stated above. </span>
       </p>
