--- a/src/pages/waitlist.astro
+++ b/src/pages/waitlist.astro
@@ -49,7 +49,7 @@ import Default from "../layouts/Default.astro";
         >
           +Add a Party
         </span>
-        <span class="block"> you agree to what is stated above. </span>
+        <span class=""> you agree to what is stated above. </span>
       </p>
     </div>
   </div>
