+ removed for waitlist

--- a/src/pages/waitlist.astro
+++ b/src/pages/waitlist.astro
@@ -47,7 +47,7 @@ import Default from "../layouts/Default.astro";
         <span
           class="inline-block rounded-md bg-red-600 px-2 py-1 text-sm text-white outline-none ring-gray-300 focus-visible:ring active:bg-gray-700"
         >
-          +Add a Party
+          Add a Party
         </span>
         <span class=""> you agree to what is stated above. </span>
       </p>
