--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -106,7 +106,7 @@ import MenuCardDetailed from "../components/MenuCardDetailed.astro";
             <div
               class="grid gap-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3"
             >
-              <MenuCard />
+              <MenuCard inStock={false} />
               <MenuCard />
               <MenuCard />
             </div>
