--- a/src/components/MenuCard.astro
+++ b/src/components/MenuCard.astro
@@ -9,6 +9,7 @@ const {
   itemNameEn = "Gochu Salad",
   itemPrice = "$6.99",
   itemLikes = 2,
+  inStock = true,
 } = Astro.props;
 ---
 
@@ -40,9 +41,17 @@ const {
       >{itemNameEn}</span
     >
     <div class="flex flex-row items-center gap-2">
-      <span class="mt-1 inline-block pr-2 text-xl leading-snug text-green-300">
-        {itemPrice}
-      </span>
+      {
+        (inStock && (
+          <span class="mt-1 inline-block pr-2 text-xl leading-snug text-green-300">
+            {itemPrice}
+          </span>
+        )) || (
+          <span class="mt-1 inline-block animate-pulse rounded-md bg-red-800 px-2 text-xl uppercase leading-snug text-red-300">
+            Sold Out
+          </span>
+        )
+      }
       <div class="flex flex-row items-center">
         {
           !(itemLikes == 0) && (
