change hover color

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,7 +33,7 @@ const BASE_URL = import.meta.env.BASE_URL;
             <div>
               <a
                 href="/contact.html"
-                class="text-gray-100 transition duration-100 hover:text-indigo-500 active:text-indigo-600"
+                class="text-gray-100 transition duration-100 hover:text-primary-500 active:text-primary-600"
               >
                 Career
               </a>
@@ -41,7 +41,7 @@ const BASE_URL = import.meta.env.BASE_URL;
             <div>
               <a
                 href="/blog.html"
-                class="text-gray-100 transition duration-100 hover:text-indigo-500 active:text-indigo-600"
+                class="text-gray-100 transition duration-100 hover:text-primary-500 active:text-primary-600"
                 >Blog</a
               >
             </div>
@@ -57,7 +57,7 @@ const BASE_URL = import.meta.env.BASE_URL;
             <div>
               <a
                 href=`${BASE_URL}/contact`
-                class="text-gray-100 transition duration-100 hover:text-indigo-500 active:text-indigo-600"
+                class="text-gray-100 transition duration-100 hover:text-primary-500 active:text-primary-600"
               >
                 Contact</a
               >
@@ -65,7 +65,7 @@ const BASE_URL = import.meta.env.BASE_URL;
             <div>
               <a
                 href=`${BASE_URL}/faq.html`
-                class="text-gray-100 transition duration-100 hover:text-indigo-500 active:text-indigo-600"
+                class="text-gray-100 transition duration-100 hover:text-primary-500 active:text-primary-600"
                 >FAQ</a
               >
             </div>
@@ -81,14 +81,14 @@ const BASE_URL = import.meta.env.BASE_URL;
             <div>
               <a
                 href="#"
-                class="text-gray-100 transition duration-100 hover:text-indigo-500 active:text-indigo-600"
+                class="text-gray-100 transition duration-100 hover:text-primary-500 active:text-primary-600"
                 >Privacy Policy</a
               >
             </div>
             <div>
               <a
                 href="#"
-                class="text-gray-100 transition duration-100 hover:text-indigo-500 active:text-indigo-600"
+                class="text-gray-100 transition duration-100 hover:text-primary-500 active:text-primary-600"
                 >Cookie settings</a
               >
             </div>
@@ -104,7 +104,7 @@ const BASE_URL = import.meta.env.BASE_URL;
             <div>
               <a
                 href="https://www.facebook.com/people/Koushinryou/100027534056280/"
-                class="text-gray-100 transition duration-100 hover:text-indigo-500 active:text-indigo-600"
+                class="text-gray-100 transition duration-100 hover:text-primary-500 active:text-primary-600"
               >
                 <img src=`${BASE_URL}/assets/facebook.svg` class="size-5" />
               </a>
@@ -112,7 +112,7 @@ const BASE_URL = import.meta.env.BASE_URL;
             <div>
               <a
                 href="https://www.instagram.com/koushinryoujax/"
-                class="text-gray-100 transition duration-100 hover:text-indigo-500 active:text-indigo-600"
+                class="text-gray-100 transition duration-100 hover:text-primary-500 active:text-primary-600"
               >
                 <img src=`${BASE_URL}/assets/instagram.svg` class="size-5" />
               </a>
