--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -31,6 +31,9 @@ const {
         class="pr-4 pt-2 text-2xl font-extrabold capitalize italic text-primary-500"
       >
         {title}
+        <span class="block text-sm font-bold italic text-primary-200"
+          >12/31/2024</span
+        >
       </h2>
       <div class="flex flex-row gap-x-2 pl-2">
         <span class="[*]:align-bottom">
