--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,15 +1,15 @@
 ---
 import Default from "./Default.astro";
+const t = ["Culture", "Japan", "Cooking"];
 const {
   title,
-  tags,
   mainimage = "https://imgix.cosmicjs.com/76185310-2eb4-11ed-9dcf-4f97d8f41281-simple-photo.jpg?w=1200&auto=format,compression",
 } = Astro.props;
 ---
 
 <Default>
   <div
-    class="mx-auto aspect-[1.5/1] sm:[2/1] max-w-screen-lg transition-all delay-75 duration-300 ease-in-out md:aspect-[3/1]"
+    class="sm:[2/1] mx-auto aspect-[1.5/1] max-w-screen-lg transition-all delay-75 duration-300 ease-in-out md:aspect-[3/1]"
   >
     <img
       src={mainimage}
@@ -22,13 +22,33 @@ const {
   <div
     class="relative z-10 -m-8 mx-auto rounded-md bg-background-700 p-4 text-gray-300 transition-all delay-75 duration-300 ease-in-out sm:max-w-screen-lg"
   >
-    <h1 class="font-sans text-2xl capitalize text-primary-500">{title}</h1>
-    <p>3m</p>
+    <h1 class="font-sans text-2xl capitalize text-primary-500">
+      {title}
+      <span class="block text-sm font-bold italic text-primary-200"
+        >12/31/2024</span
+      >
+    </h1>
+    <span class="[*]:align-bottom">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 16 16"
+        fill="currentColor"
+        class="inline-block h-5 w-5"
+      >
+        <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"></path>
+        <path
+          fill-rule="evenodd"
+          d="M1.38 8.28a.87.87 0 0 1 0-.566 7.003 7.003 0 0 1 13.238.006.87.87 0 0 1 0 .566A7.003 7.003 0 0 1 1.379 8.28ZM11 8a3 3
+                0 1 1-6 0 3 3 0 0 1 6 0Z"
+          clip-rule="evenodd"></path>
+      </svg>
+      <span class="font-bold italic">3m</span>
+    </span>
     <ul class="mt-2 flex flex-wrap gap-1">
       {
-        tags.nodes.map((name) => (
-          <li class="rounded-md bg-amber-600 px-2 text-base font-bold capitalize tracking-tight text-white shadow transition">
-            {name.name}
+        t.map((name) => (
+          <li class="rounded-md bg-accent-600 px-2 text-base font-bold capitalize tracking-tight text-white shadow transition">
+            {name}
           </li>
         ))
       }
