--- a/src/components/HoursHud.astro
+++ b/src/components/HoursHud.astro
@@ -13,7 +13,7 @@ const data = [
   {
     data.map((item) => (
       <div>
-        <div class="border-y-4 border-neutral-800 bg-primary-600 font-semibold leading-tight text-white text-xs sm:text-sm">
+        <div class="border-y-4 truncate border-neutral-800 bg-primary-600 font-semibold leading-tight text-white text-xs sm:text-sm">
           {item.day}
         </div>
         <div
